# Black-Cloud

./: .gitignore  README.md  Taskinformation.txt  main.py  pyproject.toml  task_information.txt
claude-exports/phase1/: 2026-07-13-223449-health-check.txt  2026-07-13-223602-health-check.txt  2026-07-13-224956-health-check.txt  2026-07-13-230658-health-check.txt  2026-07-13-231138-health-check.txt  2026-07-13-232236-health-check.txt  2026-07-13-232759-health-check.txt  2026-07-13-233758-this-session-is-being-continued-from-a-previous-c.txt  2026-07-13-235307-this-session-is-being-continued-from-a-previous-c.txt  2026-07-13-235406-health-check.txt  2026-07-14-110144-go-beyond-the-level-add-relvant-skills-and-apply.txt  2026-07-14-112154-go-beyond-the-level-add-relvant-skills-and-apply.txt  2026-07-14-113837-go-beyond-the-level-add-relvant-skills-and-apply.txt  2026-07-14-120159-this-session-is-being-continued-from-a-previous-c.txt
claude-exports/phase2/: 2026-07-17-104719-command-messageloopcommand-message.txt  2026-07-17-111709-this-session-is-being-continued-from-a-previous-c.txt  (+2 more)
frontend/: .bc-404.mjs  .bc-check.mjs  .bc-diag.mjs  .bc-phase3.js  .bc-shot.mjs  .gitignore  2026-07-18-155720-command-messageloopcommand-message.txt  2026-07-18-173222-command-messageloopcommand-message.txt  2026-07-18-175003-command-messageloopcommand-message.txt  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
frontend/app/: icon.tsx  (+15 more)
lib/: utils.ts
plan/: ARCHITECTURE.md  DESIGN_SYSTEM.md  MVP.md  ROADMAP.md  STRATEGIC_PLAN.md  TESTING-STRATEGY.md  VISION.md
(+390 files in other folders)
