[project]
name = "black-cloud"
version = "0.1.0"
description = "Cloud Decision Intelligence Platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "alembic>=1.18.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "psycopg[binary]>=3.3.4",
    "redis>=5.0.2,<=5.2.1",
    "celery[redis]>=5.6.3",
    "langgraph>=1.2.8",
    "langchain>=1.3.12",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "openai>=2.44.0",
    "httpx2>=2.5.0",
    "python-multipart>=0.0.32",
    "email-validator>=2.3.0",
    "pyjwt>=2.13.0",
    "sentry-sdk[fastapi]>=2.64.0",
    "tenacity>=9.1.4",
]

[tool.ruff]
line-length = 100
target-version = "py314"
